...
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zi4-F7-8KZ">
                                                    <rect key="frame" x="16" y="12.5" width="40" height="40"/>
                                                    <accessibility key="accessibilityConfiguration" label="ContactListCell_profileImage"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="40" id="8Pa-0q-i7a"/>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nitish Kumar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVK-bR-BS2">
                                                    <rect key="frame" x="72" y="22.5" width="232" height="20"/>
                                                    <accessibility key="accessibilityConfiguration" label="ContactListCell_NameLabel"/>
                                                    <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="17"/>
                                                    <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ltU-FQ-JaL">
                                                    <rect key="frame" x="319" y="20.5" width="24" height="24"/>
                                                    <accessibility key="accessibilityConfiguration" label="ContactListCell_FavButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="24" id="2xG-6u-fY0"/>
...
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yJc-q0-0Ap">
                                                        <rect key="frame" x="127.5" y="15" width="120" height="120"/>
                                                        <accessibility key="accessibilityConfiguration" label="ContactDetail_ProfileImage"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="120" id="Hpb-AB-1mX"/>
...
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACV-xN-rYv">
                                                                        <rect key="frame" x="13.5" y="0.0" width="44" height="44"/>
                                                                        <accessibility key="accessibilityConfiguration" label="ContactDetail_ChatButton"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="width" constant="44" id="IrU-vy-4Pc"/>
...
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgN-HX-8HB">
                                                                        <rect key="frame" x="13.5" y="0.0" width="44" height="44"/>
                                                                        <accessibility key="accessibilityConfiguration" label="ContactDetail_CallButton"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="width" constant="44" id="VLr-iv-HFZ"/>
...
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZS-Zi-E2s">
                                                                        <rect key="frame" x="13.5" y="0.0" width="44" height="44"/>
                                                                        <accessibility key="accessibilityConfiguration" label="ContactDetail_EmailButton"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="height" constant="44" id="H7c-2Y-e7J"/>
...
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VJ6-43-676">
                                                                        <rect key="frame" x="13.5" y="0.0" width="44" height="44"/>
                                                                        <accessibility key="accessibilityConfiguration" label="ContactDetail_FavButton"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="height" constant="44" id="ZFf-el-HeL"/>
...
                                                                <rect key="frame" x="123" y="10.5" width="197" height="35"/>
                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <accessibility key="accessibilityConfiguration" label="AddContact_FirstName"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="35" id="N6h-jx-Nsx"/>
...
                                                                <rect key="frame" x="123" y="10.5" width="197" height="35"/>
                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="AddContact_LastName" label="AddContact_LastName"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="35" id="AHe-xl-wn5"/>
...
                                                                <rect key="frame" x="123" y="10.5" width="197" height="35"/>
