...
            self.view.hideLoader()
            self.showAlert(error?.localizedDescription)
        }
    }

    override func configureUI() {
        self.tableView.accessibilityIdentifier  =   "contactsListTableView"
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addContactTapped))
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier =   "AddContactButton"
        setHeaderTitle()
    }
    
    private func setHeaderTitle() {
        self.title =   "Contacts"
    }
...
