...
            self.showAlert(error?.localizedDescription)
        }
    }

    override func configureUI() {
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .edit, target: self, action: #selector(editContactButtonTapped))
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier = "contactDetailEditButton"
    }
    
    private func updateUI() {
        nameLabel.text      =   viewModel.fullName
        mobileLabel.text    =   viewModel.phone
        emailLabel.text     =   viewModel.emailId
...
