...
  
    override func configureUI() {
        navigationController?.navigationBar.tintColor   =   Constants.Colors.headerColor        
        self.navigationItem.leftBarButtonItem = UIBarButtonItem(barButtonSystemItem: .cancel, target: self, action: #selector(cancelButtonTapped))
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(doneButtonTapped))
        self.navigationItem.leftBarButtonItem?.accessibilityIdentifier  =   "AddContact_Cancel"
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier =   "AddContact_Done"
        
    }
    
    func addObserver() {
        NotificationCenter.default.addObserver(self, selector: #selector(keyboardWillShow), name:UIResponder.keyboardWillShowNotification, object: nil)
        NotificationCenter.default.addObserver(self, selector: #selector(keyboardWillHide), name:UIResponder.keyboardWillHideNotification, object: nil)
...
